--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ before_script:
   - Rscript -e 'update.packages(lib.loc = .libPaths()[1], ask = FALSE)'
 
 script:
-  - Rscript -e 'bookdown::render_book("index.Rmd")'
+  - Rscript -e 'bookdown::render_book("index.Rmd", "all")'
 
 deploy:
   provider: script
