--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
 addons:
   apt:
     sources:
-      - sourceline: ppa:opencpu/libgit2
+      - sourceline: ppa:jeroen/libgit2
     packages:
       # git2r
       - libgit2-dev
